switched over to json and changed GuilData methods to be more verbose